=========================================================================
Date                Version     Description
=========================================================================

2023-11-15: v2.5.2 : Tested on Magento 2.4.6.
                     Refactor in keeping with Magento 2 PHP code standards.
                     Update composer requirements.
                     Add option to force Payment Type selection.
                     Add Apple Pay, Samsung Pay and RCS Payment Types.
                     Fix redirection issues to payment page (CSP whitelist).

2022-08-15: v2.5.1 : Magento 2.4.5 and PHP 8.1 compatible.
                     Code quality improvements and bug fixes.

2022-06-30: v2.5.0 : Remove layout="1column" from frontend.
                     BREAKING CHANGE: Add the ability to set Successful Order State
                     in addition to Successful Order Status. Please ensure this config
                     option is set after updating.

2022-01-05: v2.4.9 : Improve store scope handling.
                     Update Masterpass to Scan to Pay.

2021-10-20: v2.4.8 : Improve fetch method to uncancel approved fetched orders.

2021-10-08: v2.4.7 : Add debug logging option for fetch method.
                     Only use real order ID in PayWeb reference field.

2021-09-15: v2.4.6 : Disable PayGate on unsupported multiship.
                     Fix undefined offset on cron query method.
                     Improve Payment Type styling on one-step checkout.
                     Add additional logging on fetch method.

2021-08-12: v2.4.5 : Fix Swagger API issue.
                     Add PayPal payment type.
                     Fix DATA_CHK issue on Payment Types.

2021-07-30: v2.4.4 : Consolidate Cron class into single file for Magento 2.4.x.
                     Block double order processing on multiple requests.
                     Add API support for PayGate payment gateway.