@@ -2,6 +2,8 @@
 Date                Version     Description
 =========================================================================
 
+2023-12-07: v2.5.3 : Fix issues with Apple Pay payment type not selecting as expected.
+
 2023-11-15: v2.5.2 : Tested on Magento 2.4.6.
                      Refactor in keeping with Magento 2 PHP code standards.
                      Update composer requirements.
